--- a/waveform.html
+++ b/waveform.html
@@ -1,8 +1,10 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-<script src="trackvis2.js"></script>
+<script src="waveform-chrome.js"></script>
 
 <canvas id="canvas" width="400" height="200"></canvas>
 <div id="status"></div>
+
+<p>Works in Chrome</p>
 
 <style>
 canvas { border: solid 1px black }
